Added bot features

--- a/env.example
+++ b/env.example
@@ -25,3 +25,18 @@ ROBLOX_SYNC_INTERVAL=3600
 # Discord Webhook (optional - for notifications)
 # DISCORD_WEBHOOK_URL=
 
+# =================================================================
+# DISCORD BOT API CONFIGURATION
+# =================================================================
+# Generate a secure API key with: python generate_api_key.py
+DISCORD_BOT_API_KEY=your-secure-api-key-here
+
+# API rate limiting (requests per minute)
+API_RATE_LIMIT=100
+
+# Enable detailed API logging
+API_ENABLE_LOGGING=true
+
+# Discord webhook for notifications to cortex-notis channel
+# Get from: Discord Server Settings > Integrations > Webhooks > Copy Webhook URL
+DISCORD_NOTIFICATION_WEBHOOK_URL=https://discord.com/api/webhooks/YOUR_WEBHOOK_URL_HERE
