Added restrinctions to AC for HCT

--- a/env.example
+++ b/env.example
@@ -1,6 +1,7 @@
 # Flask Configuration
 SECRET_KEY=your_secret_key_here
 STAFF_PASSWORD=your_staff_password_here
+HCT_PASSWORD=your_hct_password_here
 
 # Database (optional - defaults to sqlite:///database/taskforce.db)
 # DATABASE_URL=sqlite:///database/taskforce.db
